blog and responsiveness

--- a/book-blog/index.html
+++ b/book-blog/index.html
@@ -78,32 +78,30 @@
             <h3><b>About Me!</b></h3>
             <p class="text-about">
               Hi! My name is Miriam and I am passionate about writing 📝 , the
-              planet🌔 and humans.<br />
-              Reading or Studying alone can be boring and tedious sometimes😫.
-              You set study goals<br />
-              but never make it to and end, Find the right community in Diskuz
-              to attain your goal.
+              planet🌔 and humans. Reading or Studying alone can be boring and
+              tedious sometimes😫. You set study goals but never make it to and
+              end, Find the right community in Diskuz to attain your goal.
             </p>
           </section>
           <!-- Book Category -->
           <section class="book-category">
             <h3><b>Book Categories</b></h3>
-            <div class="book">
+            <div class="book-container">
               <figure>
                 <img src="./assets/python.png" id="img-book" alt="" srcset="" />
                 <figcaption>
                   <span><b>Tech and IT</b></span>
                   <i class="far fa-heart">100 Likes</i>
                 </figcaption>
-                  <a href="http://" id="btn-link">Read</a>
+                <a href="http://" id="btn-link">Read</a>
               </figure>
               <figure>
-                <img src="./assets/astronomy.png" alt="" id="img-book"/>
+                <img src="./assets/astronomy.png" alt="" id="img-book" />
                 <figcaption>
                   <span><b>Astronomy</b></span>
                   <i class="far fa-heart">200 Likes</i>
                 </figcaption>
-                  <a href="http://" id="btn-link">Read</a>
+                <a href="http://" id="btn-link">Read</a>
               </figure>
               <figure>
                 <img src="./assets//Thriller.png" alt="" id="img-book" />
@@ -111,7 +109,7 @@
                   <span><b>Thriller</b></span>
                   <i class="far fa-heart">50 Likes</i>
                 </figcaption>
-                  <a href="http://" id="btn-link">Read</a>
+                <a href="http://" id="btn-link">Read</a>
               </figure>
               <figure>
                 <img src="./assets/sci-fiction.png" alt="" id="img-book" />
@@ -119,7 +117,7 @@
                   <span><b>Sci-Fiction</b></span>
                   <i class="far fa-heart">120 Likes</i>
                 </figcaption>
-                  <a href="http://" id="btn-link">Read</a>
+                <a href="http://" id="btn-link">Read</a>
               </figure>
             </div>
           </section>
