--- a/book-blog/pages/blog.html
+++ b/book-blog/pages/blog.html
@@ -112,6 +112,28 @@
       </div>
     </div>
 
+    <section class="blog-article">
+      <blockquote>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+          Reprehenderit necessitatibus et animi labore! Culpa quos eveniet 
+          repellat obcaecati assumenda, consectetur neque voluptas amet fuga 
+          vel delectus impedit repudiandae nobis error eos optio aperiam eaque 
+          quae enim. Modi numquam quo doloribus voluptatem cumque. <u>Minima inventore, 
+          quidem labore debitis porro iusto accusamus quos odio, </u>
+          beatae accusantium illo nulla, totam dicta. Magnam, reprehenderit!	
+      </blockquote>
+      <br />
+      <strong>
+          <q>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Architecto, quo. Aliquam natus, itaque qui dolores veniam facere 
+              maiores est. Ratione placeat, ipsa hic maiores nulla accusantium 
+              voluptatibus nostrum nesciunt? Quasi unde veritatis, fugiat consequuntur
+              amet nesciunt iste dolorum minus officiis!
+          </q>
+      </strong>
+  </section>
+
     <footer>
       <div class="footer-content">
         <!--add all information -->
