--- a/weather-journal-app/website/index.html
+++ b/weather-journal-app/website/index.html
@@ -12,10 +12,7 @@
   <body>
     <div id="app">
       <div class="holder headline">Weather Journal App</div>
-        <div class="holder country">
-          <label for="zip">Enter Country here</label>
-          <input type="text" id="country" placeholder="enter country here" />
-        </div>
+      <form id="form">
         <div class="holder zip">
           <label for="zip">Enter Zipcode here</label>
           <input type="text" id="zip" placeholder="enter zip code here" />
@@ -30,6 +27,7 @@
             cols="50"
           ></textarea>
         </div>
+      </form>
       <div class="holder entry">
         <div class="title">Most Recent Entry</div>
         <div id="entryHolder" class="api-input">
@@ -40,6 +38,6 @@
       </div>
       <button id="generate" type="submit">Generate</button>
     </div>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
